--- a/references_all.bib
+++ b/references_all.bib
@@ -2323,5 +2323,45 @@ http://ukads.nottingham.ac.uk/abs/1958MNRAS.118..276J},
 	author = {Dowell, Jayce and Wood, Daniel and Stovall, Kevin and Ray, Paul S. and Clarke, Tracy and Taylor, Gregory},
 	month = sep,
 	year = {2012},
-	file = {Full Text PDF:/Users/jameskent/Zotero/storage/QEBHFDEJ/Dowell et al. - 2012 - The Long Wavelength Array Software Library.pdf:application/pdf}
+	file = {Full Text PDF:/Users/jameskent/Zotero/storage/QEBHFDEJ/Dowell et al. - 2012 - The Long Wavelength Array Software Library.pdf:application/pdf;Snapshot:/Users/jameskent/Zotero/storage/D26KG5VQ/1209.html:text/html}
+}
+
+@article{bowman_absorption_2018,
+	title = {An absorption profile centred at 78 megahertz in the sky-averaged spectrum},
+	volume = {555},
+	copyright = {2018 Nature Publishing Group},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/nature25792},
+	doi = {10.1038/nature25792},
+	abstract = {After stars formed in the early Universe, their ultraviolet light is expected, eventually, to have penetrated the primordial hydrogen gas and altered the excitation state of its 21-centimetre hyperfine line. This alteration would cause the gas to absorb photons from the cosmic microwave background, producing a spectral distortion that should be observable today at radio frequencies of less than 200 megahertz1. Here we report the detection of a flattened absorption profile in the sky-averaged radio spectrum, which is centred at a frequency of 78 megahertz and has a best-fitting full-width at half-maximum of 19 megahertz and an amplitude of 0.5 kelvin. The profile is largely consistent with expectations for the 21-centimetre signal induced by early stars; however, the best-fitting amplitude of the profile is more than a factor of two greater than the largest predictions2. This discrepancy suggests that either the primordial gas was much colder than expected or the background radiation temperature was hotter than expected. Astrophysical phenomena (such as radiation from stars and stellar remnants) are unlikely to account for this discrepancy; of the proposed extensions to the standard model of cosmology and particle physics, only cooling of the gas as a result of interactions between dark matter and baryons seems to explain the observed amplitude3. The low-frequency edge of the observed profile indicates that stars existed and had produced a background of Lyman-α photons by 180 million years after the Big Bang. The high-frequency edge indicates that the gas was heated to above the radiation temperature less than 100 million years later.},
+	language = {en},
+	number = {7694},
+	urldate = {2018-10-02},
+	journal = {Nature},
+	author = {Bowman, Judd D. and Rogers, Alan E. E. and Monsalve, Raul A. and Mozdzen, Thomas J. and Mahesh, Nivedita},
+	month = mar,
+	year = {2018},
+	pages = {67--70},
+	file = {Bowman et al_2018_An absorption profile centred at 78 megahertz in the sky-averaged spectrum.pdf:/Users/jameskent/Google_Drive/PhD/Academic/Reading/Bowman et al_2018_An absorption profile centred at 78 megahertz in the sky-averaged spectrum.pdf:application/pdf;Snapshot:/Users/jameskent/Zotero/storage/D6V5QQU9/nature25792.html:text/html}
+}
+
+@article{dowell_swarm_2018,
+	title = {The {Swarm} {Telescope} {Concept}},
+	volume = {07},
+	issn = {2251-1717, 2251-1725},
+	url = {http://arxiv.org/abs/1806.10634},
+	doi = {10.1142/S225117171850006X},
+	abstract = {As telescope facilities become increasingly more capable they also become increasingly complex and require additional resources to operate. This is particularly true for the current and future generations of "software defined telescopes" that can support a variety of observing programs simultaneously, either through commensal observations or through support for multiple pointing centers as in the case of dipole arrays or dishes equipped with phased array feeds. At the same time, many current and future facilities are also distributed over large geographic areas, making monitoring and maintenance more difficult and costly. For these reasons we have developed a new paradigm for telescope operations called the "swarm telescope" that breaks large, single facilities into smaller groups of independent systems that can collaboratively work together to function as a single facility but with much less operational overhead. In this paper we outline the swarm telescope concept and an example of its implementation at the Long Wavelength Array. We also discuss potential advantages of using this approach for other facilities, in particular the Next Generation Very Large Array.},
+	language = {en},
+	number = {02n03},
+	urldate = {2018-10-05},
+	journal = {Journal of Astronomical Instrumentation},
+	author = {Dowell, Jayce and Taylor, Gregory B.},
+	month = sep,
+	year = {2018},
+	note = {arXiv: 1806.10634},
+	keywords = {Astrophysics - Instrumentation and Methods for Astrophysics},
+	pages = {1850006},
+	annote = {Comment: 15 pages, 4 figures, JAI accepted},
+	file = {Dowell and Taylor - 2018 - The Swarm Telescope Concept.pdf:/Users/jameskent/Zotero/storage/EQRK6GV9/Dowell and Taylor - 2018 - The Swarm Telescope Concept.pdf:application/pdf}
 }
