--- a/images/pipeline.tex
+++ b/images/pipeline.tex
@@ -10,7 +10,7 @@
 \begin{document}
 \begin{tikzpicture}[x=1.2cm,y=1.2cm]
 
-
+  \tikzstyle{every node}=[font=\large, font=\bfseries]
   \draw [fill=blue, fill opacity = 0.2] (0,5.0) -- (3.0,5.0) -- (3.0,5.0 - 3) -- (0,5.0 - 3) -- cycle;
   \node at (1.5,3.5) [align=center] { UDP \\ Receive };
   
@@ -30,7 +30,7 @@
     \draw [->] (y3) -- (y4);
   }
 
-  \node at (1.5,-1.5) [align=center] { EPICal: \\ Gain Multiplication };
+  \node at (1.5,-1.5) [align=center] { EPICal: \\ Gain  \\ Multiplication };
   \node at (1.5,-6.5) [align=center] { Decimation and \\ Transposition};
   \node at (1.5,-11.5)  [align=center] { Grid and FFT };
   \node at (1.5,-16.5)  [align=center] { Square and \\ Accumulate Image };
@@ -61,8 +61,8 @@
   \draw (5.8, -0.1) node {Ring Buffer};
   \draw [fill = blue, fill opacity = 0.2] (4.25, -0.5) -- (4.75,-0.5) -- (4.75,-1.0) -- (4.25,-1.0) -- cycle;
   \draw [fill = red, fill opacity = 0.2] (4.25, -1.1) -- (4.75,-1.1) -- (4.75,-1.6) -- (4.25,-1.6) -- cycle;
-  \draw (6.8, -0.7) node { Implemented Bifrost Blocks};
-  \draw (6.8, -1.3) node { Not Implemented Currently };
+  \draw (7.0, -0.7) node { Implemented Bifrost Blocks};
+  \draw (7.0, -1.3) node { Not Implemented Currently };
 
   
 \end{tikzpicture}
